--- a/www/test6.html
+++ b/www/test6.html
@@ -28,7 +28,7 @@
     </div>
     <section>
         <contet>
-            <quest> Математика. Ирина вызвала в доске, а ты играешь в телефончик.</quest>
+            <quest> Математика. Ирина вызвала к доске, а ты играешь в телефончик.</quest>
             <p></p>
             <quest>Твои действия:</quest>
             <p></p>
