--- a/www/index.html
+++ b/www/index.html
@@ -74,7 +74,7 @@
 		<h2>Наша Команда</h2>
 		<div class="team-row">
 			<figure>
-				<img src="images/Nikijan.png" width="96" height="96" alt="">
+				<img src="images/Nikijan1.png" width="96" height="96" alt="">
 				<figcaption>Никита Девяткин<span>Главный в пати</span></figcaption>
 			</figure>
 			<figure>
